# disk-wiper

./: .gitignore  .pre-commit-config.yaml  README.md  disk-wiper.py  disk_wiper.py  pyproject.toml
.dev-bin/: disk-wiper
.devtools/: check-conventions.sh
.github/workflows/: release.yml
docs/dev/: releases.md
