[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "disk-wiper"
version = "1.0.6"
description = "Disk wipe tool for home-server preparation"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Casa Eureka"}
]

[project.scripts]
disk-wiper = "disk_wiper:main"

[tool.setuptools]
py-modules = ["disk_wiper"]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = [".direnv", ".git", ".venv", "__pycache__", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
]
ignore = [
    "E501",    # line too long
    "B008",    # function calls in defaults
    "SIM108",  # ternary operator
    "RET504",  # variable before return
]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = false
